=== 2.6

* Major enhancements
  * Improved merging of classes and modules across multiple files including
    more accurate documentation statistics.  Patch by Thierry Lambert.
  * Improved handling of method aliases.  Patch by Thierry Lambert.
  * Added support for class aliases.  Patch by Thierry Lambert.
  * Improved handling of visibility of RDoc code objects.  Patch by Thierry
    Lambert.
  * RDoc now converts input files to a single encoding specified by
    <tt>--encoding</tt>.  See RDoc::RDoc and RDoc::Options#encoding.
    <tt>--encoding</tt> is now preferred over <tt>--charset</tt>
  * RDoc::Attr#type is now RDoc::Attr#definition.  Patch by Thierry Lambert.
  * Removed TimeConstantMethods
* Minor enhancements
  * Added rdoc argument <tt>--dry-run</tt>
  * Added rdoc arguments <tt>--all</tt>, <tt>--visibility</tt>,
    <tt>--force-output</tt>, <tt>--hyperlink-all</tt>,
    <tt>--line-numbers</tt>, <tt>--style</tt>.  Patch by Thierry Lambert.
  * RDoc::Markup::FormatterTestCase has been expanded.  Patch by Thierry
    Lambert.
  * RDoc::Markup::TextFormatterTestCase has been extracted from RDoc tests.
    Patch by Thierry Lambert.
  * Various RDoc::Markup::Parser enhancements.  Patch by Thierry Lambert.
  * RDoc::Parser::binary? is more robust now that it uses Encoding.
  * Deprecated rdoc arguments are now explicitly mentioned in rdoc command
    output.  Patch by Thierry Lambert.
  * Constant values are formatted more accurately.  Patch by Thierry Lambert.
  * Enhanced call-seq parsing in RDoc::Parser::C.  Patch by Thierry Lambert.
  * RDoc no longer uses kw, cmt, re or str classes for embedded source code
    snippets.  Patch by Thierry Lambert.
  * RDoc directives may now be escaped with a leading '\\'.  Patch by Thierry
    Lambert.
  * RDoc note lists (<tt>label::</tt>) now generate a table with class
    rdoc-list.  Patch by Thierry Lambert.
  * RDoc markup documentation has been moved to RDoc::Markup including notes